基础框架基本完毕

--- a/app/frontend/stylesheets/application.tailwind.css
+++ b/app/frontend/stylesheets/application.tailwind.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @plugin "daisyui";
 @plugin "@iconify/tailwind4";
+@plugin "@tailwindcss/typography";
 
 @source "../../../app/views/**/*.html.erb";
 @source "../../../app/views/**/*.rb";
