--- a/app/views/stock_strategies/index.html.erb
+++ b/app/views/stock_strategies/index.html.erb
@@ -21,16 +21,19 @@
           <th>名称</th>
           <th>代码</th>
           <th>类型</th>
+          <th>最新价格</th>
           <th>操作</th>
         </tr>
         </thead>
         <tbody>
+        <%= turbo_stream_from "stock_strategies_index" %>
         <% @stock_strategies.each do |stock_strategy| %>
-          <tr>
+          <tr id="<%= dom_id(stock_strategy) %>">
             <th><%= stock_strategy.id %></th>
             <td><%= link_to stock_strategy.name, stock_strategy_path(stock_strategy) %></td>
             <td><%= stock_strategy.stock_symbol %></td>
             <td><%= stock_strategy.security_type %></td>
+            <td><%= stock_strategy.latest_price %></td>
             <td>
               <%= link_to "查看", stock_strategy, class: "link link-accent" %>
               <%= link_to "编辑", edit_stock_strategy_path(stock_strategy), class: "link link-primary" %>
