--- a/app/views/stock_strategies/show.html.erb
+++ b/app/views/stock_strategies/show.html.erb
@@ -5,6 +5,8 @@
       <span class="font-medium"><%= @stock_strategy.name %> - <%= @stock_strategy.latest_price %></span>
     </div>
   </div>
-  <%= render partial: "stock_price_chart",
-             locals: { stock_data: @stock_strategy.stock_history_data.to_json } %>
+  <% cache ["stock_price_chart", @stock_strategy.id], expires_in: 1.hour do %>
+    <%= render partial: "stock_price_chart",
+               locals: { stock_data: @stock_strategy.stock_history_data.to_json } %>
+  <% end %>
 </div>
