--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -25,22 +25,14 @@
           <th>最新价格</th>
           <th>成本价</th>
           <th>盈亏</th>
+          <th>盈亏比</th>
           <th>可用数量</th>
         </tr>
         </thead>
         <tbody>
         <% @positions.each do |position| %>
-          <tr id="<%= dom_id(position) %>">
-            <th><%= position.id %></th>
-            <td><%= position.stock_name %></td>
-            <td><%= position.stock_code %></td>
-            <td><%= number_to_currency position.last_price, unit: "" %></td>
-            <td><%= number_to_currency position.cost_price, unit: "" %></td>
-            <td class="<%= position.profit_loss > 0 ? 'text-red-400' : 'text-green-400' %>">
-              <%= number_to_currency position.profit_loss, unit: "" %>
-            </td>
-            <td><%= position.available_quantity %></td>
-          </tr>
+          <%= render partial: "stock_position_tr",
+                     locals: { position: position } %>
         <% end %>
         </tbody>
       </table>
