--- a/app/views/share/_nav.html.erb
+++ b/app/views/share/_nav.html.erb
@@ -9,6 +9,7 @@
         class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
         <li><%= link_to "主页", root_path %></li>
         <li><%= link_to "策略", stock_strategies_path %></li>
+        <li><%= link_to "后台任务", mission_control_jobs_path %></li>
       </ul>
     </div>
   </div>
