--- a/app/views/stock_strategies/_stock_strategy_tr.html.erb
+++ b/app/views/stock_strategies/_stock_strategy_tr.html.erb
@@ -2,9 +2,9 @@
   <th><%= stock_strategy.id %></th>
   <td><%= link_to stock_strategy.name, stock_strategy_path(stock_strategy) %></td>
   <td><%= stock_strategy.stock_symbol %></td>
-  <td><%= stock_strategy.security_type %></td>
   <td><%= stock_strategy.latest_price %></td>
   <td>
+    <%= link_to "日志", logs_stock_strategy_path(stock_strategy), class: "link" %>
     <%= link_to "查看", stock_strategy, class: "link link-accent" %>
     <%= link_to "编辑", edit_stock_strategy_path(stock_strategy), class: "link link-primary" %>
     <%= link_to "删除", stock_strategy_path(stock_strategy),
