--- a/app/views/stock_strategies/index.html.erb
+++ b/app/views/stock_strategies/index.html.erb
@@ -20,7 +20,6 @@
           <th></th>
           <th>名称</th>
           <th>代码</th>
-          <th>类型</th>
           <th>最新价格</th>
           <th>操作</th>
         </tr>
@@ -28,18 +27,7 @@
         <tbody>
         <%= turbo_stream_from "stock_strategies_index" %>
         <% @stock_strategies.each do |stock_strategy| %>
-          <tr id="<%= dom_id(stock_strategy) %>">
-            <th><%= stock_strategy.id %></th>
-            <td><%= link_to stock_strategy.name, stock_strategy_path(stock_strategy) %></td>
-            <td><%= stock_strategy.stock_symbol %></td>
-            <td><%= stock_strategy.security_type %></td>
-            <td><%= stock_strategy.latest_price %></td>
-            <td>
-              <%= link_to "查看", stock_strategy, class: "link link-accent" %>
-              <%= link_to "编辑", edit_stock_strategy_path(stock_strategy), class: "link link-primary" %>
-              <%= link_to "删除", stock_strategy_path(stock_strategy),
-                          data: { turbo_confirm: "确定要删除吗？", turbo_method: :delete }, class: "link link-secondary" %>
-          </tr>
+          <%= render partial: "stock_strategy_tr", locals: { stock_strategy: stock_strategy } %>
         <% end %>
         </tbody>
       </table>
