--- a/app/views/stock_strategies/logs.html.erb
+++ b/app/views/stock_strategies/logs.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_stream_from "stock_strategies_show" %>
+<%= turbo_stream_from "stock_strategies_show_#{@stock_strategy.id}" %>
 <ul class="list bg-base-100 rounded-box shadow-md mt-3">
 
   <li class="p-4 pb-2 text-xs opacity-60 tracking-wide">策略运行日志</li>
